--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 <h1 style="text-align:center">Akso: the goddess of healing</h1>
-<img src="http://4.bp.blogspot.com/-jPDn3KSBVTw/UHX0oJIpeAI/AAAAAAAAEps/JBnE2fN0BQM/s320/akeso+4.jpg" alt="Akso" style="margin:auto; display:block" />
+<img src="http://s-media-cache-ak0.pinimg.com/736x/ea/8e/a4/ea8ea4c089d56a611325faf5c6b40867.jpg" alt="Akso" style="margin:auto; display:block" />
 
 </body>
 </html>
